0.48 2022-12-06
        - Added support for NKJP tagset in annotation
          assistant. (diewald)
        - Remove deprecated 'auth_support' (since 0.31)
          configuration parameter - use 'Auth' plugin instead. (diewald)

0.47 2022-11-22
        - Add command to generate super_client_info file. (diewald)
        - Support 'client_file' parameter as an alternative to 'client_id'
          and 'client_secret'. (diewald)

0.46 2022-08-08
        - Increased max query length from 1000 to 4096 characters. (kupietz)
        - Fix handling of public clients. (diewald)
        - Improve support for non-latin tokens in annotation table views.
          (Fixes #168; diewald)

0.45 2022-05-20
        - Added confidential client support to OAuth. (diewald)
        - Added OAuth client authorization handling. (diewald)
        - Mark public clients as slightly more insecure. (diewald)
        - Reintroduce email handle support. (fixes #165; diewald)
        - Support plugin declarations on registration. (diewald)
        - Fetch client information before grant request. (diewald)
        - Enable Zooming on mobile clients. (diewald)
        - Auth Plugin sets cookie expiration explicitely
          to 3 days. (diewald)
        - Remove JWT Auth flow, which was deprecated since 0.42.
          (diewald)

0.44 2022-02-31
        - Fixed autosecrets migration. (diewald)
        - Format page numbers in pagination. (diewald)
        - Introduce tei2korapxml command via plugin. (diewald)
        - Introduce korapxml2tei command via plugin. (diewald)
        - Plugin toggle states are now managed by the state
          manager and can therefore survive URL changes. (diewald)
        - Add KorAP::XML::Krill and KorAP::XML::TEI to
          Dockerfile. (diewald)
        - Improve handling of invalid URIs in attachements. (diewald)

0.43 2021-11-05
        - New menu class that has an entry at the very end,
          similar to the input text prefix,